Describe what you changed

--- a/index.html
+++ b/index.html
@@ -726,6 +726,7 @@
                             <span class="date">2025</span>
                             <h3>Diploma in Psychology and Counselling</h3>
                             <p>SITC Campus, Sri Lanka</p>
+                            <p>Grades: Basic of Counseling - A+, General Psychology - A, Abnormal Psychology - A+, Counseling Ethics & Skills - A+, Techniques of Counseling - A+</p>
                         </div>
                         <div class="timeline-item">
                             <span class="date">2024</span>
