--- a/index.html
+++ b/index.html
@@ -892,7 +892,7 @@
     <section id="contact" class="contact">
         <div class="container">
             <div class="section-title">
-                <h2>Contact & References</h2>
+                <h2>Contact</h2>
             </div>
             <div class="contact-container">
                 <!-- Contact Information -->
